# AutoVtuber

./: .gitignore  AUTOVTUBER.md  README.md  WAKE_UP_NOTES.md  autovtuber.spec  config.example.toml  pyproject.toml  requirements.txt  run.bat
assets/base_models/: face_uv_template_A.json  face_uv_template_B.json  face_uv_template_C.json
assets/i18n/: en_US.ts  zh_CN.ts  zh_TW.ts
docs/: BUILDING.md  DOWNLOAD_MANIFEST.md  HARDWARE_PROTOCOL.md  LICENSES.md  MVP3_PLAN.md  architecture.md  prompt_engineering.md  vrm_spec_notes.md
scripts/: bake_face_uv_template.py  debug_face_mesh.py  render_mesh_preview.py  smoke_test_e2e.py  smoke_test_e2e_avatarB.py  smoke_test_mesh_fitter.py  smoke_test_triposr.py
src/autovtuber/: __init__.py  __main__.py  main.py
src/autovtuber/config/: manifest.py  paths.py  settings.py
src/autovtuber/i18n/: translator.py
src/autovtuber/pipeline/: face_aligner.py  face_baker.py  face_generator.py  face_tracker.py  image_to_3d.py  job_spec.py  mesh_fitter.py  orchestrator.py  persona_generator.py  prompt_builder.py  texture_recolor.py  vrm_assembler.py
src/autovtuber/presets/: preset_store.py
src/autovtuber/safety/: exceptions.py  hardware_guard.py  (+4 more)
tests/: test_arkit_blendshape_writer.py  test_color_tag_hsv.py  test_face_generator_ip_adapter.py  test_face_tracker.py  test_hardware_guard.py  test_image_to_3d.py  test_job_spec.py  test_mesh_fitter.py  test_model_loader.py  test_orchestrator_split.py  test_persona_generator.py  test_preset_store.py  test_prompt_builder.py  test_resource_check.py  test_texture_recolor.py  test_vrm_io.py
(+29 files in other folders)
